syntax = "proto3";

import "opendut/model/util/net.proto";

package opendut.model.vpn;

message VpnPeerConfig {
  oneof config {
    VpnPeerConfigDisabled disabled = 1;
    VpnPeerConfigNetbird netbird = 2;
  }
}

message VpnPeerConfigDisabled {}

message VpnPeerConfigNetbird {
  opendut.model.util.Url management_url = 1;
  SetupKey setup_key = 2;
}

message SetupKey {
  string value = 1;
}
